2008-12-08  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/36802
	* omp-low.c (use_pointer_for_field): Only call maybe_lookup_decl
	on parallel and task contexts.

2008-12-07  Eric Botcazou  <ebotcazou@adacore.com>

	* gimple.c (recalculate_side_effects) <tcc_constant>: New case.

2008-12-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38405
	* tree-vrp.c (simplify_truth_ops_using_ranges): Make sure to
	not sign-extend truth values.

2008-12-07  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-sra.c (scalarize_use): Create another temporary with the proper
	type for signed types in the use_all && !is_output bitfield case.

2008-12-06  Steven Bosscher  <steven@gcc.gnu.org>

	PR rtl-optimization/36365
	* df-core.c (df_worklist_dataflow_overeager): Remove.
	(df_worklist_dataflow): Don't call it, use double-queue only.
	* params.def (PARAM_DF_DOUBLE_QUQUQ_THRESHOLD_FACTOR): Remove.

2008-12-06  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/38428
	* tree-ssa-operands.c (get_expr_operands) <case BIT_FIELD_REF>: Set
	gimple_set_has_volatile_ops if the BIT_FIELD_REF is volatile.

2008-12-07  Ben Elliston  <bje@au.ibm.com>

	* gthr-single.h (__gthread_once): Adjust prototype to match all
	other gthreads models.

2008-12-06  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (override_options): Use CPU_AMDFAM10
	instead of PROCESSOR_AMDFAM10 for barcelona's schedule.

	PR middle-end/38422
	* fold-const.c (fold_unary) <CASE_CONVERT>: Don't convert MULT_EXPR
	operands to mult_type if it isn't narrower than op0's type.

2008-12-06  Jan Hubicka  <jh@suse.cz>
	    Jakub Jelinek <jakub@redhat.com>

	PR tree-optimization/38074
	* cgraphbuild.c (compute_call_stmt_bb_frequency): Fix handling of 0
	entry frequency.
	* predict.c (combine_predictions_for_bb): Ignore predictor predicting
	in both dirrection for first match heuristics.
	(tree_bb_level_predictions): Disable noreturn heuristic when there
	is no returning path.
